# wz2100legacy

./: .gitignore  AUTHORS  Makefile.am  README  build.sh  build_microwave_popping.sh  config.h.in  configure.ac  legacy.geany
lib/gamelib/: Makefile.am  animobj.h  audp_lexer.c  audp_parser.c  audp_parser.h  audp_parser.y  hashtable.c  hashtable.h  parser.h
wzlegacy/: AUTHORS  COPYING.NONGPL  ChangeLog  HowToCompile.txt  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac
wzlegacy/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
wzlegacy/data/: Makefile  Makefile.am  Makefile.in
wzlegacy/data/autom4te.cache/: requests
wzlegacy/data/mp/: addon.lev  addon.lev~
wzlegacy/data/music/: Makefile  Makefile.in
wzlegacy/doc/: Makefile  Makefile.am  Makefile.in  Readme.en  wz2100legacy.7.asciidoc
wzlegacy/extras/: legacylobby.c
wzlegacy/icons/: Makefile  Makefile.am  Makefile.in  wz2100legacy.desktop
wzlegacy/lib/: Makefile.in
wzlegacy/lib/backend/: Makefile  Makefile.am  Makefile.in  backend_game.cpp  backend_main.cpp  wzapp_backend.cpp  wzapp_backend.h
wzlegacy/lib/exceptionhandler/: Makefile  Makefile.in  dumpinfo.cpp  dumpinfo.h  exceptionhandler.c  exceptionhandler.cpp  exceptionhandler.h  exchndl.c  exchndl.cpp
wzlegacy/lib/framework/: Makefile  Makefile.am  Makefile.in  SDL_framerate.c  SDL_framerate.h  config-macosx.h  configfile.c  configfile.h  cursors.c  cursors.h  cursors16.c  cursors32.c  debug.c  debug.h  endian_hack.h  file.h  fixedpoint.h  frame.c  frame.h  frameint.h  frameresource.c  frameresource.h  gettext.h  i18n.c  i18n.h  input.c  input.h  lexer_input.c  lexer_input.h  listmacs.h  macros.h  math_ext.h  physfs_ext.h  resly.h  resource_lexer.c  resource_lexer.cpp  resource_lexer.l  resource_lexer.lpp  resource_parser.c  resource_parser.cpp  (+26 more)
wzlegacy/lib/gamelib/: Makefile  Makefile.am  Makefile.in  anim.c  anim.h  animobj.c  animobj.h  audp_lexer.c  audp_lexer.cpp  audp_lexer.l  audp_lexer.lpp  audp_parser.c  audp_parser.h  audp_parser.y  gtime.c  gtime.h  hashtable.c  hashtable.h  parser.h
wzlegacy/lib/iniparser/: Makefile.in  dictionary.c  dictionary.h  iniparser.c  iniparser.h
wzlegacy/lib/ivis_common/: Makefile.in  bitimage.c  bitimage.h  imd.c  imdload.c  ivi.h  ivisdef.h  jpeg_encoder.c  pieblitfunc.h  pieclip.c  pieclip.h  piedef.h  piefunc.h  piemode.h  piepalette.h  piestate.c  piestate.h  pietypes.h  png_util.c  png_util.h  rendmode.h  tex.h  textdraw.h
wzlegacy/lib/ivis_opengl/: GLee.c  GLee.h  Makefile  Makefile.in  ivi.c  pieblitfunc.c  pieblitfunc.h  piedraw.c  piefunc.c  piematrix.c  piematrix.h  piemode.c  piepalette.c  piestate.c  rendmode.c  screen.c  screen.cpp  screen.h  tex.c  textdraw.c
wzlegacy/lib/libglc/: Makefile.am  context.c  except.c  font.c  global.c  misc.c  oarray.c  oarray.h  ocharmap.c  ocontext.h  ofacedesc.h  ofont.c  oglyph.h  omaster.h  render.c  texture.c  transform.c  unicode.c
wzlegacy/lib/netplay/: Makefile  Makefile.am  Makefile.in  netjoin_stub.c  netlog.c  netlog.cpp  netlog.h  netplay.c  netplay.cpp  netplay.h  nettypes.c  nettypes.h
wzlegacy/lib/qtgame/: main_qt.cpp  wzapp_qt.cpp
wzlegacy/lib/script/: Makefile  Makefile.am  Makefile.in  chat_lexer.c  chat_lexer.cpp  chat_lexer.l  chat_lexer.lpp  chat_parser.c  chat_parser.h  chat_parser.y  chat_processing.h  codeprint.c  codeprint.h  event.c  event.h  eventsave.c  eventsave.h  interpreter.c  interpreter.h  parse.h  script.c  script.h  script_lexer.c  script_lexer.cpp  script_lexer.l  script_lexer.lpp  script_parser.c  script_parser.cpp  script_parser.h  script_parser.y  stack.c  stack.h
wzlegacy/lib/sequence/: Makefile  Makefile.in  sequence.c  sequence.h  timer.c  timer.h
wzlegacy/lib/sound/: Makefile  Makefile.am  Makefile.in  aud.h  audio.c  audio.h  audio_id.c  audio_id.h  cdaudio.c  cdaudio.h  mixer.h  oggvorbis.c  oggvorbis.h  openal_error.c  openal_error.h  openal_track.c  playlist.c  playlist.h  track.c  track.h  tracklib.h
wzlegacy/lib/widget/: Makefile  Makefile.in  bar.c  bar.h  button.c  button.h  editbox.c  editbox.h  form.c  form.h  label.c  label.h  scrap.c  scrap.h  slider.c  slider.h  tip.c  tip.h  widgbase.h  widget.c  widget.h  widgint.h
wzlegacy/pkg/dpkg/: warzone2100-data.install
wzlegacy/pkg/nsis/: Makefile  Makefile.am  Makefile.in  warzone2100.nsi  wz2100legacy.nsi
wzlegacy/po/: Makefile  Makefile.in  POTFILES  POTFILES.in  ca_ES.gmo  ca_ES.po  ca_ES.po~  cs.gmo  cs.po  cs.po~  da.gmo  da.po  da.po~  de.gmo  de.po  de.po~  en_GB.gmo  en_GB.po  en_GB.po~  es.gmo  es.po  es.po~  et_EE.gmo  et_EE.po  et_EE.po~  fi.gmo  fi.po  fi.po~  fr.gmo  fr.po  fr.po~  fy.gmo  fy.po  fy.po~  ga.gmo  ga.po  ga.po~  hr.gmo  hr.po  hr.po~  (+55 more)
wzlegacy/po/custom/: mac-infoplist.txt  warzone2100.desktop.txt
wzlegacy/src/: Makefile  Makefile.am  Makefile.in  action.c  action.cpp  action.h  advvis.c  advvis.cpp  advvis.h  ai.c  ai.cpp  ai.h  aiexperience.c  aiexperience.h  anim_id.h  astar.c  astar.h  atmos.c  atmos.h  aud.c  autorevision.h  basedef.h  baseobject.c  baseobject.h  bridge.c  bridge.h  bucket3d.c  bucket3d.h  challenge.c  challenge.h  cheat.c  cheat.cpp  cheat.h  clparse.c  clparse.cpp  clparse.h  cluster.c  cluster.h  cmddroid.c  cmddroid.h  (+256 more)
wzlegacy/tests/: Makefile  Makefile.am  Makefile.in
wzlegacy/tools/image/: Makefile.am  image.cpp
wzlegacy/tools/map/: Makefile  Makefile.in
wzlegacy/warzone2100-legacy_microwave/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
wzlegacy/warzone2100-legacy_microwave/data/: Makefile.in
wzlegacy/warzone2100-legacy_microwave/doc/: Makefile.in
wzlegacy/warzone2100-legacy_microwave/icons/: Makefile.in  warzone2100.desktop  (+1 more)
wzlegacy/win32/: Makefile  Makefile.am  Makefile.in  wz2100legacy.rc
(+1199 files in other folders)
